Small content updates for Save and return + LPD > LPA

--- a/app/views/appeal/more-than-one-appeal/v3/your-appeals.html
+++ b/app/views/appeal/more-than-one-appeal/v3/your-appeals.html
@@ -37,7 +37,7 @@
         firstCellIsHeader: false,
         head: [
           {
-            text: 'Local planning department'
+            text: 'Local planning authority'
           },
           {
             html: 'Appeal type',
