--- a/app/views/appeal/save-and-return/v7/enter-code--confirm-email.html
+++ b/app/views/appeal/save-and-return/v7/enter-code--confirm-email.html
@@ -8,6 +8,14 @@
   {
     href: 'email--code',
     text: 'Email with code'
+  },
+  {
+    href: 'code-expired',
+    text: 'Code has expired'
+  },
+  {
+    href: 'code-wrong',
+    text: 'Entered the wrong code too many times'
   }
 ] %}
 
