--- a/app/views/appeal/more-than-one-appeal/v3/your-appeals-alt.html
+++ b/app/views/appeal/more-than-one-appeal/v3/your-appeals-alt.html
@@ -55,7 +55,7 @@
               firstCellIsHeader: false,
               head: [
                 {
-                  text: 'Local planning department'
+                  text: 'Local planning authority'
                 },
                 {
                   html: 'Appeal type',
