--- a/app/views/appeal/more-than-one-appeal/v4/your-appeals.html
+++ b/app/views/appeal/more-than-one-appeal/v4/your-appeals.html
@@ -68,7 +68,7 @@
                 firstCellIsHeader: false,
                 head: [
                   {
-                    text: 'Local planning department'
+                    text: 'Local planning authority'
                   },
                   {
                     html: 'Appeal type',
