Fixes to GH link for input examples

--- a/app/views/patterns/input/address.html
+++ b/app/views/patterns/input/address.html
@@ -19,7 +19,7 @@
     </h1>
 
     <p class="govuk-body">
-      <a href="https://github.com/Planning-Inspectorate/appeals-prototype/tree/main/app/views/patterns/code/address" class="govuk-link">
+      <a href="https://github.com/Planning-Inspectorate/appeals-prototype/blob/main/app/views/patterns/input/address.html" class="govuk-link">
         View the code on GitHub
       </a>
     </p>
