--- a/app/views/patterns/input/name.html
+++ b/app/views/patterns/input/name.html
@@ -27,7 +27,7 @@
     </p>
 
     <p class="govuk-body">
-      <a href="https://github.com/Planning-Inspectorate/appeals-prototype/tree/main/app/views/patterns/code/name" class="govuk-link">
+      <a href="https://github.com/Planning-Inspectorate/appeals-prototype/blob/main/app/views/patterns/input/name.html" class="govuk-link">
         View the code on GitHub
       </a>
     </p>
