--- a/app/views/appeal/save-and-return/v7/code-wrong.html
+++ b/app/views/appeal/save-and-return/v7/code-wrong.html
@@ -9,7 +9,7 @@
   </h1>
 
   <p class="govuk-body">
-    The code you’re trying to enter has expired.
+    You need a new code
   </p>
 
   <p class="govuk-body">
