Content update for wrong code (when the code is entered too many times)

--- a/app/views/appeal/save-and-return/v7/code-wrong.html
+++ b/app/views/appeal/save-and-return/v7/code-wrong.html
@@ -1,16 +1,12 @@
 {% extends '_layouts/layout-main.html' %}
 
-{% set title = 'Code expired' %}
+{% set title = 'You need a new code' %}
 {% set back = false %}
 
 {% block questions %}
   <h1 class="govuk-heading-l">
     {{title}}
   </h1>
-
-  <p class="govuk-body">
-    You need a new code
-  </p>
 
   <p class="govuk-body">
     <a href="enter-code" class="govuk-link">
