Quick change to the new task list when arriving from the save and return journey

--- a/app/views/appeal/lbc/v2/before-you-continue.html
+++ b/app/views/appeal/lbc/v2/before-you-continue.html
@@ -52,7 +52,7 @@
 
   {{ govukButton({
     text: 'Continue',
-    href: 'task-list?lbc=1'
+    href: 'task-list'
   }) }}
 
   <p class="govuk-body"><a href="/appeal/save-and-return/v6/appeal-saved" class="govuk-link--no-visited-state">Save and come back later</a></p>
