--- a/app/views/appeal/lbc/v2/task-list.html
+++ b/app/views/appeal/lbc/v2/task-list.html
@@ -93,7 +93,7 @@
                     text: 'Appeal type'
                   },
                   value: {
-                    text: 'Listed building consent'
+                    text: 'Full planning'
                   }
                 }
               ]
