Content changes for save and return, confirming the email address

--- a/app/views/appeal/save-and-return/v7/confirm-email.html
+++ b/app/views/appeal/save-and-return/v7/confirm-email.html
@@ -11,9 +11,9 @@
     We’ll use this email address to contact you about your appeal.
   </p>
 
-  <!-- <p class="govuk-body">
-    You can also save your progress.
-  </p> -->
+  <p class="govuk-body">
+    We’ll send you a code to confirm the email address is yours.
+  </p>
 
   {{ govukInput({
     id: 'email',
