--- a/app/views/appeal/save-and-return/v7/email--code.html
+++ b/app/views/appeal/save-and-return/v7/email--code.html
@@ -7,11 +7,7 @@
 {% set prototypeLinks = [
   {
     href: 'enter-code--confirm-email?newcode=',
-    text: 'Confirming an email address'
-  },
-  {
-    href: 'enter-code',
-    text: 'Returning to an appeal'
+    text: 'Back to the enter code screen'
   }
 ] %}
 
@@ -35,5 +31,5 @@
     html: '12345'
   }) }}
 
-  <p class="govuk-body">The code is valid for 30 minutes.</p>
+  <p class="govuk-body">This code is valid for 30 minutes.</p>
 {% endblock %}
