--- a/app/views/appeal/save-and-return/v7/email-confirmed.html
+++ b/app/views/appeal/save-and-return/v7/email-confirmed.html
@@ -8,6 +8,8 @@
     {{title}}
   </h1>
 
-  <!-- <p class="govuk-body">You do not have any appeals to submit or action.</p> -->
+  <p class="govuk-body">
+    You can continue with your appeal.
+  </p>
 
 {% endblock %}
