--- a/app/views/appeal/save-and-return/v7/enter-code--confirm-email.html
+++ b/app/views/appeal/save-and-return/v7/enter-code--confirm-email.html
@@ -26,9 +26,8 @@
 {% set resentNotification %}
   <mark role="alert" class="govuk-!-margin-bottom-0">
     <h3 class="govuk-notification-banner__heading">
-      Code resent
+      We’ve sent a new code to your email address.
     </h3>
-    <p class="govuk-body">We&rsquo;ve resent a code to your email address, it might take a few minutes to arrive.</p>
   </mark>
 {% endset %}
 
@@ -56,10 +55,37 @@
     text: 'Continue'
   }) }}
 
+  <h2 class="govuk-heading-m">
+    If you’re having problems
+  </h2>
+
   <p class="govuk-body">
-    <a href="?newcode=true" class="govuk-link--no-visited-state">
-      Send a new code
-    </a>
+    <a href="confirm-email" class="govuk-link">Change your email address</a> if you entered it incorrectly.
   </p>
+
+  <p class="govuk-body">
+    Check if the email has gone to your spam or junk folder. If it’s not there, we can <a href="?newcode=true" class="govuk-link--no-visited-state">send a new code</a>.
+  </p>
+
+  <details class="govuk-details" data-module="govuk-details">
+    <summary class="govuk-details__summary">
+      <span class="govuk-details__summary-text">
+        If you’re still having problems
+      </span>
+    </summary>
+    <div class="govuk-details__text">
+      <p class="govuk-body">
+        You can contact our customer support team.
+      </p>
+
+      <p class="govuk-body">
+        Email: <a href="#0">enquiries@planninginspectorate.gov.uk</a><br>
+        Telephone: 0303 444 5000<br>
+        Monday to Friday, 9am to 12pm (except public holidays)<br>
+        <a href="#0">Find out about call charges</a>.
+      </p>
+
+    </div>
+  </details>
 
 {% endblock %}
