Quick n dirty task list counter

--- a/app/views/appeal/save-and-return/v7/email--code.html
+++ b/app/views/appeal/save-and-return/v7/email--code.html
@@ -8,6 +8,10 @@
   {
     href: 'enter-code--confirm-email?newcode=',
     text: 'Back to the enter code screen'
+  },
+  {
+    href: 'code-expired',
+    text: 'Code entered after 30 minutes'
   }
 ] %}
 
