Quick fix for the local link to the Herokuapp view - in layout-main

--- a/app/views/_layouts/layout-main.html
+++ b/app/views/_layouts/layout-main.html
@@ -85,7 +85,7 @@
 					text: 'Clear data'
 				},
 				{
-					href: 'https://appeals-prototype.herokuapp.com/' + currentURL,
+					href: 'https://appeals-prototype.herokuapp.com' + currentURL,
 					text: "View page on Heroku (opens in new tab)",
 					attributes: {
 						target: 'blank'
