Quick fix, declaration

--- a/app/views/appeal/lbc/v2/task-list.html
+++ b/app/views/appeal/lbc/v2/task-list.html
@@ -435,7 +435,7 @@
                 {% if data['tasksdone'] != 'true' %}
                   Agree to declaration and submit appeal
                 {% else %}
-                  <a href='check-answers'>
+                  <a href='declaration'>
                     Agree to declaration and submit appeal
                   </a>
                 {% endif %}
