Fixing the link from the resend code screen

--- a/app/views/appeal/lbc/v2/about-you/contact-details.html
+++ b/app/views/appeal/lbc/v2/about-you/contact-details.html
@@ -14,7 +14,7 @@
     isPageHeading: true
     }
   }) %}
-    <p class="govuk-hint">This should match the name on the application to the local planning authority</p>
+    <!-- <p class="govuk-hint">This should match the name on the application to the local planning authority</p> -->
 
     {{ govukInput({
       id: 'applicant-first-name',
