--- a/app/views/appeal/save-and-return/v7/code-expired.html
+++ b/app/views/appeal/save-and-return/v7/code-expired.html
@@ -13,7 +13,7 @@
   </p>
 
   <p class="govuk-body">
-    <a href="enter-code" class="govuk-link">
+    <a href="enter-code--confirm-email?newcode=true" class="govuk-link">
     Send a new code
   </p>
 
