Small content update for LBC - before you continue

--- a/app/views/appeal/lbc/v2/before-you-continue.html
+++ b/app/views/appeal/lbc/v2/before-you-continue.html
@@ -43,7 +43,7 @@
   </ul>
 
   <p class="govuk-body">
-    From now, you’re able to save and come back to your appeal later.
+    From now, you're able to save your appeal and come back later.
   </p>
 
 {% endblock %}
