--- a/app/views/appeal/lbc/v2/task-list.html
+++ b/app/views/appeal/lbc/v2/task-list.html
@@ -5,7 +5,7 @@
 {% set prototypeLinks = [{href: 'declaration', text: 'Skip to declaration'}] %}
 
 
-<!-- need to get the counter working -->
+<!-- need to get the counter working better -->
 
 <!-- need to add check answers -->
 
@@ -108,7 +108,7 @@
       <p class="govuk-body">Your deadline to submit this appeal is {{ '6' | daysInFuture }}.</p>
 
       <p>
-        <a href="#0" class="govuk-link--no-visited-state">Save and come back later</a>.
+        <a href="/appeal/save-and-return/v7/appeal-saved" class="govuk-link--no-visited-state">Save and come back later</a>.
       </p>
 
     </div>
