--- a/app/views/appeal/save-and-return/v5/govuk-start.html
+++ b/app/views/appeal/save-and-return/v5/govuk-start.html
@@ -211,7 +211,7 @@
       {{ govukInsetText({
         html: 'Email: <a href="#0">enquiries@planninginspectorate.gov.uk</a><br>
         Telephone: 0303 444 5000<br>
-        Monday to Friday, 9am to 12pm (except public holidays)<br>
+        Monday to Friday, 9am to midday (except public holidays)<br>
         <a href="#0">Find out about call charges</a>'
       }) }}
 
