--- a/app/views/appeal/lbc/v2/about-the-site/agricultural-notified.html
+++ b/app/views/appeal/lbc/v2/about-the-site/agricultural-notified.html
@@ -26,7 +26,7 @@
     },
     items: [
       {
-        html: 'I confirm that I&rsquo;ve told all the tenants about my appeal within the last 21 days using a copy of the form in annexe 2A',
+        html: 'I confirm that I’ve told all the tenants about my appeal within the last 21 days using a copy of the form in annexe 2A',
         value: 'Yes',
         checked: checked('agricultural-notified','Yes')
       }
