--- a/app/views/appeal/lbc/v2/about-the-site/owners-notified.html
+++ b/app/views/appeal/lbc/v2/about-the-site/owners-notified.html
@@ -12,7 +12,7 @@
 
   <p class="govuk-body">You must have told all of the landowners about the appeal.</p>
 
-  <p class="govuk-body">You must have done this within the last 21 days using a copy of the <a href="https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/994918/eHow_To_-_Planning_18_ANNEX.pdf" rel="noreferrer noopener" target="_blank">form in annexe 2A or 2B of the 'making your appeal' guidance (opens in new tab)</a>.</p>
+  <p class="govuk-body">You must have done this within the last 21 days using a copy of the <a href="https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/994918/eHow_To_-_Planning_18_ANNEX.pdf" rel="noreferrer noopener" target="_blank">form in annexe 2A or 2B of the ‘making your appeal’ guidance (opens in new tab)</a>.</p>
 
   {{ govukCheckboxes({
     idPrefix: 'owners-notified',
@@ -26,7 +26,7 @@
     },
     items: [
       {
-        html: 'I confirm that I&rsquo;ve told all the landowners about my appeal within the last 21 days using a copy of the form in annexe 2A or 2B',
+        html: 'I confirm that I’ve told all the landowners about my appeal within the last 21 days using a copy of the form in annexe 2A or 2B',
         value: 'Yes',
         checked: checked('owners-notified','Yes')
       }
