--- a/app/views/manage/manage-users/v3/add-user.html
+++ b/app/views/manage/manage-users/v3/add-user.html
@@ -15,19 +15,33 @@
   }) }}
 {% endblock %}
 
-{% block questions %}
-  {{ govukInput({
-    id: 'add-user-email',
-    name: 'add-user-email',
-    classes: 'govuk-!-width-two-thirds',
-    label: {
-      html: title,
-      classes: 'govuk-label--l',
-      isPageHeading: true
-    },
-    suffix: {
-      html: data['lpa-email']
-    },
-    spellcheck: false
-  }) }}
+{% block content %}
+	<div class="govuk-grid-row">
+		<div class="govuk-grid-column-three-quarters">
+
+      <form method="post">
+
+      {{ govukInput({
+        id: 'add-user-email',
+        name: 'add-user-email',
+        classes: 'govuk-!-width-two-thirds',
+        label: {
+          html: title,
+          classes: 'govuk-label--l',
+          isPageHeading: true
+        },
+        suffix: {
+          html: data['lpa-email']
+        },
+        spellcheck: false
+      }) }}
+
+      {% block buttons %}
+        {{ govukButton({
+          text: 'Continue'
+        }) }}
+      {% endblock %}
+
+    </form>
+
 {% endblock %}
