Company name added to contact

--- a/app/views/appeal/lbc/v2/about-you/appellant-check.html
+++ b/app/views/appeal/lbc/v2/about-you/appellant-check.html
@@ -28,6 +28,11 @@
         html: 'Another individual',
         value: 'Another individual',
         checked: checked('appellant-check','Another individual')
+      },
+      {
+        html: 'A company',
+        value: 'A company',
+        checked: checked('appellant-check','A company')
       }
     ]
   }) }}
